pypiserver/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pypiserver
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: pypiserver
