pypiserver/ingresses.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pypiserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - pypiserver.vitalbeats.dev
      secretName: pypiserver-tls
  rules:
    - host: pypiserver.vitalbeats.dev
      http:
        paths:
          - backend:
              serviceName: pypiserver
              servicePort: 8080
